init: start nonograms task

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ dist
 
 # TernJS port file
 .tern-port
+nonograms/style.css.map
+nonograms/style.scss
+nonograms/.prettierrc.js
+nonograms/.eslintrc.js
